--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Seiva Bruta Tattoo</title>
     </head>
     <body>
-        <h1>Sample Text</h1>
-        <p>Sample Text</p>
+        
     </body>
 </html>
