--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
         <title>Seiva Bruta Tattoo</title>
+            <div class="dropdown">
+                <img class="icon" src="img/logo.jpg">
+                <img class="icon" class="dropbtn" src="img/3lin.png">
+                <div class="dropdown-content">
+                    <a href="#">Portifólios</a>
+                    <a href="#">Orçamentos</a>
+                    <a href="#">Login</a>
+                </div>
+            </div>
+        </ul>
     </head>
     <body>
         
