--- a/Site/index.html
+++ b/Site/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Seiva Bruta Tattoo</title>
-            <div class="dropdown">
-                <img class="icon" src="img/logo.jpg">
-                <img class="icon" class="dropbtn" src="img/3lin.png">
-                <div class="dropdown-content">
-                    <a href="#">Portifólios</a>
-                    <a href="#">Orçamentos</a>
-                    <a href="#">Login</a>
-                </div>
-            </div>
-        </ul>
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        <title>SeivaBrutaTattoo</title>
     </head>
     <body>
-        
+        <ul>
+            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="orçamentos.html">Solicitar orçamentos</a></li>
+            <li><a href="portfolio.html">visualizar portfólio</a></li>
+          </ul>
+          <h1>Tattos em destaque :)</h1>
+          <h1>sobre tatuadores</h1>
+          <h1>avaliar</h1>
+          <input type="text" placeholder="avaliação"><br>
+          <input type="submit" value="Submit">
     </body>
 </html>
