--- a/Site/eventos.html
+++ b/Site/eventos.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            
-        <title>Animated loader</title>
+        <link rel="icon" href="src/icon.png" type="image/png">
+        <title>Eventos|SeivaBrutaTattoo</title>
 
         <style>
             body {
@@ -21,13 +21,13 @@
                 border-radius: 50%;
                 background: #ffcc00;
                 position: absolute;
-                right: 40%;
+                right: 10%;
                 animation: pieces 1s linear infinite;
             }
 
             .one {
                 position: absolute;
-                top: 50.5%;
+                top: 54%;
                 left: 30%;
                 background: rgb(116, 9, 116);
                 border-radius: 0 0 125px 125px;
@@ -48,11 +48,12 @@
             }
 
             .eye {
-                position: absolute;
-                right: 60%;
+                position: relative;
+                left: -100px;
                 top: 40%;
+                bottom: 50px;
                 background: white;
-                padding: 12px;
+                padding: 10px;
                 border-radius: 50%;
                 animation: eye 1s linear infinite;
             }
@@ -64,7 +65,7 @@
                 font-size: 25px;
                 letter-spacing: 2px;
                 top: 53%;
-                right: 30%;
+                right: 20%;
                 font-family: arial;
                 color: purple;
             }
