--- a/Site/orçamentos.html
+++ b/Site/orçamentos.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        <link rel="icon" href="src/icon.png" type="image/png">
         <title>Solicitar Orcamento|SeivaBrutaTattoo</title>
     </head>
     <body>
