--- a/Site/orçamentos.html
+++ b/Site/orçamentos.html
@@ -25,5 +25,14 @@
             </div> <br><br>
             <button>Solicitar Orçamento</button>
         </div>
+
+        <nav>
+            <ul>
+              <li><a href="eventos.html">Eventos</a></li>
+              <li><a href="orçamentos.html">Pedir Orçamento</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
