--- a/Site/eventos.html
+++ b/Site/eventos.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         <link rel="icon" href="src/icon.png" type="image/png">
         <title>Eventos|SeivaBrutaTattoo</title>
 
@@ -52,7 +53,7 @@
                 left: -100px;
                 top: 40%;
                 bottom: 50px;
-                background: white;
+                background: #0D0D0D;
                 padding: 10px;
                 border-radius: 50%;
                 animation: eye 1s linear infinite;
@@ -134,6 +135,16 @@
         <div class="eye"></div>
 
         <p>Página em andamento...</p>
+
+        <nav>
+            <ul>
+                <li id="logo"><a href="index.html"><img src="src/icon.png"></a></li>
+                <li><a href="eventos.html">EVENTOS</a></li>
+                <li><a href="orçamentos.html">SOLICITAR ORÇAMENTO</a></li>
+                <li><a href="portfolio.html">PORTIFÓLIO</a></li>
+                <li><a href="login.html">LOGIN</a></li>
+            </ul>
+        </nav>
     </body>
 
 </html>
