--- a/Site/index.html
+++ b/Site/index.html
@@ -4,18 +4,26 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         <link rel="icon" href="src/icon.png" type="image/png">
+        <script src="script.js"></script>
         <title>SeivaBrutaTattoo</title>
     </head>
     <body>
-        <ul>
-            <li><a href="eventos.html">Eventos</a></li>
-            <li><a href="orçamentos.html">Solicitar orçamentos</a></li>
-            <li><a href="portfolio.html">visualizar portfólio</a></li>
-          </ul>
-          <h1>Tattos em destaque :)</h1>
-          <h1>sobre tatuadores</h1>
-          <h1>avaliar</h1>
-          <input type="text" placeholder="avaliação"><br>
-          <input type="submit" value="Submit">
+
+        <div id="inicial">
+            <h1>Tattos em destaque :)</h1>
+            <h1>sobre tatuadores</h1>
+            <h1>avaliar</h1>
+            <input type="text" placeholder="avaliação"><br>
+            <input type="submit" value="Submit">
+        </div>
+        <nav>
+            <ul>
+                <li id="logo"><a href="index.html"><img src="src/icon.png"></a></li>
+                <li><a href="eventos.html">EVENTOS</a></li>
+                <li><a href="orçamentos.html">SOLICITAR ORÇAMENTO</a></li>
+                <li><a href="portfolio.html">PORTIFÓLIO</a></li>
+                <li><a href="login.html">LOGIN</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
