--- a/Site/cadastrar.html
+++ b/Site/cadastrar.html
@@ -11,12 +11,11 @@
             <img src="src/icon.png">
             <h1>Cadastre-se:</h1>
             <form>
-                <input type="text" placeholder="E-mail" required>
-                <input type="text" placeholder="E-mail" required>
-                <input type="text" placeholder="E-mail" required>
+                <input type="text" placeholder="Nome" required>
+                <input type="text" placeholder="Sobrenome" required>
+                <input type="number" placeholder="Telefone" required>
                 <input type="text" placeholder="E-mail" required>
                 <input type="password" placeholder="Senha" required>
-                <input type="password" placeholder="Confirmar enha" required>
                 <input type="submit" value="Cadastre-se">
             </form>
           </div>
