--- a/Site/portfolio.html
+++ b/Site/portfolio.html
@@ -35,7 +35,7 @@
             <ul>
                 <li id="logo"><a href="index.html"><img src="src/icon.png"></a></li>
                 <li><a href="eventos.html">EVENTOS</a></li>
-                <li><a href="orçamentos.html">PEDIR ORÇAMENTO</a></li>
+                <li><a href="orçamentos.html">SOLICITAR ORÇAMENTO</a></li>
                 <li><a href="portfolio.html">PORTIFÓLIO</a></li>
                 <li><a href="login.html">LOGIN</a></li>
             </ul>
