--- a/Site/index.html
+++ b/Site/index.html
@@ -11,16 +11,16 @@
         <div id="inicial">
             <img class="temp" src="src/template.jpg">
             <div id="galeria">
-                <img src="src/addimg.png" alt="Imagem 1">
-                <img src="src/addimg.png" alt="Imagem 2">
-                <img src="src/addimg.png" alt="Imagem 3">
-                <img src="src/addimg.png" alt="Imagem 4">
-                <img src="src/addimg.png" alt="Imagem 5">
-                <img src="src/addimg.png" alt="Imagem 6">
-                <img src="src/addimg.png" alt="Imagem 7">
-                <img src="src/addimg.png" alt="Imagem 8">
-                <img src="src/addimg.png" alt="Imagem 9">
-                <img src="src/addimg.png" alt="Imagem 10">
+                <img src="src/adddimg.png" alt="Imagem 1">
+                <img src="src/adddimg.png" alt="Imagem 2">
+                <img src="src/adddimg.png" alt="Imagem 3">
+                <img src="src/adddimg.png" alt="Imagem 4">
+                <img src="src/adddimg.png" alt="Imagem 5">
+                <img src="src/adddimg.png" alt="Imagem 6">
+                <img src="src/adddimg.png" alt="Imagem 7">
+                <img src="src/adddimg.png" alt="Imagem 8">
+                <img src="src/adddimg.png" alt="Imagem 9">
+                <img src="src/adddimg.png" alt="Imagem 10">
             </div>
 
             <div class="container">
