--- a/Site/index.html
+++ b/Site/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         <link rel="icon" href="src/icon.png" type="image/png">
         <script src="script.js"></script>
+        <script src="script.js"></script>
         <title>SeivaBrutaTattoo</title>
     </head>
     <body>
@@ -21,6 +22,7 @@
                 <img src="src/adddimg.png" alt="Imagem 8">
                 <img src="src/adddimg.png" alt="Imagem 9">
                 <img src="src/adddimg.png" alt="Imagem 10">
+                <button class="adminButton" style="display:none;">Editar Tatoos em destaque</button>
             </div>
 
             <div class="container">
@@ -28,7 +30,8 @@
                   <img class="tatuador" src="src/pessoa.png" alt="Foto 1">
                   <div class="content">
                     <h2>Nome do tatuador</h2>
-                    <p>Descrição sobre o tatuador.</p>
+                    <p>Descrição s222 obre o tatuador ks jdhfjks bdj ahsgdhas dhagsdhasdg ajgfd fgbsgfsgbf bshufvhs jbfisbfibsifb sgfsdg fsgdhf sdugf sgdf sfgusd sdg fisdgifgsdiuf shfshf shjfoshjf shf h.</p>
+                    <button class="adminButton" style="display:none;">Editar Perfil</button>
                   </div>
                 </div>
                 <div class="item">
@@ -36,6 +39,7 @@
                     <div class="content">
                         <h2>Nome do tatuador</h2>
                         <p>Descrição sobre o tatuador.</p>
+                        <button class="adminButton" style="display:none;">Editar Perfil</button>
                     </div>
                 </div>
             </div>
@@ -45,15 +49,17 @@
                     <img src="src/foto.jpg">
                     <div class="aval">
                         <h3>Nome avaliador</h3>
-                        <p>Avaliação...</p>
+                        <p>Avaliação... sdjhf sfdb ushgf hsiuhg hsjdgahjsgd ajhsdghjgdf ja222 shdghjasgdf ajhsgdjashdg jhasgdhf jshdghfnf hgf sjkuytfbr sadf</p>
                     </div>
+                    <button class="adminButton" style="display:none;">Excluir</button>
                 </div>
                 <div class="avaliacao">
                     <img src="src/foto.jpg">
                     <div class="aval">
                         <h3>Nome avaliador</h3>
-                        <p>Avaliação...</p>
+                        <p>Avaliação... sdjhf sfdb ushgf hsiuhg hsjdgahjsgd ajhsdghjgdf ja222 shdghjasgdf ajhsgdjashdg jhasgdhf jshdghfnf hgf sjkuytfbr sadf</p>
                     </div>
+                    <button class="adminButton" style="display:none;">Excluir</button>
                 </div>
                 <input type="text" placeholder="Deixe sua avaliação...">
                 <input type="submit" value="Avaliar">
