--- a/Site/orçamentos.html
+++ b/Site/orçamentos.html
@@ -22,6 +22,7 @@
             </form>
             <button><img id="ref" src="src/img.png"></button>
             <input type="submit" value="Solicitar Orçamento">
+            <button class="adminButton" id="cad">Verificar orçamentos</button><!--OUTRA PAG-->
           </div>
 
         <nav>
