--- a/Site/portfolio.html
+++ b/Site/portfolio.html
@@ -12,7 +12,7 @@
             <button class="portp" onclick="mostrarLista()">
                 <img class="perfil" src="src/pessoa.png">
             </button>
-            <button class="portp" onclick="mostrarLista()">
+            <button class="portp" onclick="mostrarLista2()">
                 <img class="perfil" src="src/pessoa.png">
             </button>
             <ul id="minhaLista" style="display:none;">  
@@ -28,6 +28,22 @@
                 <img class="portfolio" src="src/addimg.png">
                 <img class="portfolio" src="src/addimg.png">
                 <img class="portfolio" src="src/addimg.png">
+                <button class="adminButton" style="display:none;">Editar portfolio</button>
+            </ul>
+            <ul id="minhaLista2" style="display:none;">  
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/error.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <img class="portfolio" src="src/addimg.png">
+                <button class="adminButton" style="display:none;">Editar portfolio</button>
             </ul>
         </div>    
         
