--- a/Site/cadastrar.html
+++ b/Site/cadastrar.html
@@ -2,23 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-        <link rel="icon" href="src/icon.png" type="image/png">
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen"></link>
+        <link rel="icon" href="src/icon.png" type="image/png"></link>
+        <script src="script.js"></script>
         <title>Login|SeivaBrutaTattoo</title>
     </head>
     <body>
         <div class="login-screen">
-            <img src="src/icon.png">
+            <img src="src/icon.png"></img>
             <h1>Cadastre-se:</h1>
             <form>
-                <input type="text" placeholder="Nome" required>
-                <input type="text" placeholder="Sobrenome" required>
-                <input type="number" placeholder="Telefone" required>
-                <input type="text" placeholder="E-mail" required>
-                <input type="password" placeholder="Senha" required>
-                <input type="submit" value="Cadastre-se">
+                <input type="text" placeholder="Nome" required></input>
+                <input type="text" placeholder="Sobrenome" required></input>
+                <input type="number" placeholder="Telefone" required></input>
+                <input type="text" placeholder="E-mail" required></input>
+                <input type="password" placeholder="Senha" required></input>
+                <input type="submit" value="Cadastre-se"></input>
+                <button class="adminButton" id="cad">Cadastrar administrador</button>
             </form>
           </div>
-          <script src="script.js"></script>
     </body>
 </html>
