--- a/Site/portfolio.html
+++ b/Site/portfolio.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         <script src="script.js"></script>
         <link rel="icon" href="src/icon.png" type="image/png">
