--- a/Site/cadastrar.html
+++ b/Site/cadastrar.html
@@ -13,12 +13,12 @@
             <img src="src/icon.png"></img>
             <h1>Cadastre-se:</h1>
             <form>
-                <input type="text" placeholder="Nome" required></input>
-                <input type="text" placeholder="Sobrenome" required></input>
-                <input type="number" placeholder="Telefone" required></input>
-                <input type="text" placeholder="E-mail" required></input>
-                <input type="password" placeholder="Senha" required></input>
-                <input type="submit" value="Cadastre-se"></input>
+                <input class="input" type="text" placeholder="Nome" required></input>
+                <input class="input" type="text" placeholder="Sobrenome" required></input>
+                <input class="input" type="number" placeholder="Telefone" required></input>
+                <input class="input" type="text" placeholder="E-mail" required></input>
+                <input class="input" type="password" placeholder="Senha" required></input>
+                <input class="submit" type="submit" value="Cadastre-se"></input>
                 <button class="adminButton" id="cad">Cadastrar administrador</button>
             </form>
           </div>
