--- a/Site/index.html
+++ b/Site/index.html
@@ -11,6 +11,11 @@
     </head>
     <body>
         <div id="inicial">
+            
+        <!--!!!!!!!!!!!!!!!!!!!!!!!-->
+        <button class="menuzito"><a href="menu.html"><img src="src/menu.png"></img></a></button>
+
+
             <img class="temp" src="src/template.jpg">
             <div id="galeria">
                 <img src="src/adddimg.png" alt="Imagem 1">
@@ -57,13 +62,13 @@
                 <div class="avaliacao">
                     <img src="src/foto.jpg">
                     <div class="aval">
-                        <h3>Nome avaliador</h3>
+                        <h3>Nome</h3>
                         <p>Avaliação... sdjhf sfdb ushgf hsiuhg hsjdgahjsgd ajhsdghjgdf ja222 shdghjasgdf ajhsgdjashdg jhasgdhf jshdghfnf hgf sjkuytfbr sadf</p>
                     </div>
                     <button class="adminButton" style="display:none;">Excluir</button>
                 </div>
-                <input type="text" placeholder="Deixe sua avaliação...">
-                <input type="submit" value="Avaliar">
+                <input class="input" type="text" placeholder="Deixe sua avaliação...">
+                <input class="submit" type="submit" value="Avaliar">
             </div>
         </div>
           
