--- a/Site/orçamentos.html
+++ b/Site/orçamentos.html
@@ -12,8 +12,8 @@
         <div class="login-screen">
             <img src="src/icon.png">
             <h1>Solicite seu orçamento:</h1>
-            <input type="number" placeholder="Tamanho da tatuagem">
-            <input type="text" placeholder="Local do corpo">
+            <input class="input" type="number" placeholder="Tamanho da tatuagem"></input>
+            <input class="input" type="text" placeholder="Local do corpo"></input>
             <form class="form-dropdown">
                 <select id="campo" name="campo" class="select-dropdown">
                     <option value="nome">Selecione o tatuador:</option>
@@ -22,9 +22,9 @@
                 </select>
             </form>
             <button><img id="ref" src="src/img.png"></button>
-            <input type="submit" value="Solicitar Orçamento">
-            <button class="adminButton" id="cad">Verificar orçamentos</button><!--OUTRA PAG-->
-          </div>
+            <input class="submit" type="submit" value="Solicitar Orçamento"></input>
+            <button class="adminButton" id="orç"><a href="visualizar_orçamentos.html">Verificar orçamentos</a></button><!--MUDEI-->
+        </div>
 
         <nav>
             <nav>
