--- a/Site/login.html
+++ b/Site/login.html
@@ -12,9 +12,9 @@
             <img src="src/icon.png">
             <h1>Login:</h1>
             <form>
-              <input type="text" placeholder="E-mail" required>
-              <input type="password" placeholder="Senha" required>
-              <input type="submit" value="Entrar">
+              <input class="input" type="text" placeholder="E-mail" required>
+              <input class="input" type="password" placeholder="Senha" required>
+              <input class="submit" type="submit" value="Entrar">
               <a href="cadastrar.html">Ainda não possui conta?</a>
             </form>
           </div>
