--- a/SeivaBruta/projeto/src/main/webapp/index.xhtml
+++ b/SeivaBruta/projeto/src/main/webapp/index.xhtml
@@ -8,6 +8,7 @@
     <ui:define name="content">
 
 	<h:head>
+		<meta charset="UTF-8"></meta>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
         <link rel="stylesheet" type="text/css" href="resources/css/style.css" media="screen"></link>
         <link rel="icon" href="resources/img/icon.png" type="image/png"></link>
@@ -17,6 +18,7 @@
     
     <h:body>
         <div id="inicial">
+        	<a href="menu.xhtml"><button class="menuzito"><img src="resources/img/menu.png"></img></button></a>
             <img class="temp" src="resources/img/template.jpg"></img>
             <div id="galeria">
                 <img src="resources/img/adddimg.png" alt="Imagem 1"></img>
