--- a/SeivaBruta/projeto/src/main/webapp/admin_register.xhtml
+++ b/SeivaBruta/projeto/src/main/webapp/admin_register.xhtml
@@ -20,7 +20,7 @@
     <body>
         <div class="login-screen">
             <img src="resources/img/icon.png"></img>
-            <h:form id="dialogs">
+            <h:form>
             	<h:inputText id="login" class="input" a:placeholder="Login" value="#{adminRegisterController.admin.login}" required="true" />
             	<h:inputSecret id="password" class="input" a:placeholder="Senha" value="#{adminRegisterController.admin.password}" maxlength="16"
                 	required="true" requiredMessage="Informe uma Senha!" />
