--- a/SeivaBruta/projeto/src/main/webapp/budgets.xhtml
+++ b/SeivaBruta/projeto/src/main/webapp/budgets.xhtml
@@ -4,6 +4,7 @@
     			xmlns:ui="http://java.sun.com/jsf/facelets"
     			xmlns:f="http://java.sun.com/jsf/core"
     			xmlns:h="http://java.sun.com/jsf/html"
+    			xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
     			template="/WEB-INF/templates/default.xhtml">		
     <ui:define name="content">
     
@@ -18,19 +19,23 @@
     
     <h:body>
         <div class="login-screen">
-            <img src="resources/img/icon.png">
+            <img src="resources/img/icon.png"></img>
             <h1>Solicite seu orçamento:</h1>
-            <input class="input" type="number" placeholder="Tamanho da tatuagem"></input>
-            <input class="input" type="text" placeholder="Local do corpo"></input>
-            <form class="form-dropdown">
-                <select id="campo" name="campo" class="select-dropdown">
-                    <option value="nome">Selecione o tatuador:</option>
-                    <option value="email">Alexandre Penteado</option>
-                    <option value="telefone">Karine Duarte</option>
-                </select>
-            </form>
-            <button><img id="ref" src="src/img.png"></button>
-            <input class="submit" type="submit" value="Solicitar Orçamento"></input>
+            <h:form>
+            	<h:inputText id="size" class="input" a:placeholder="Tamanho da Tatuagem" value="#{budgetRegisterController.budget.size}" required="true" />
+				<h:inputText id="spot" class="input" a:placeholder="Local do Corpo" value="#{budgetRegisterController.budget.spot}" required="true" />
+            	<h:selectOneMenu value="#{budgetRegisterController.budget.delegate}" required="true" class="select-dropdown">
+				   	<f:selectItem itemValue="#{null}" itemLabel="Qualquer" />
+				   	<f:selectItem itemValue="Alexandre Penteado" itemLabel="Alexandre Penteado" />
+				   	<f:selectItem itemValue="Karine Duarte" itemLabel="Karine Duarte" />
+				</h:selectOneMenu>
+				<h:inputText id="ref1" class="input" a:placeholder="Referência (Link da Imagem)" value="#{budgetRegisterController.budget.ref1}" required="true" />
+				<h:inputText id="ref2" class="input" a:placeholder="Referência (Link da Imagem)" value="#{budgetRegisterController.budget.ref2}" />
+				<h:inputText id="ref3" class="input" a:placeholder="Referência (Link da Imagem)" value="#{budgetRegisterController.budget.ref3}" />
+				<h:inputText id="ref4" class="input" a:placeholder="Referência (Link da Imagem)" value="#{budgetRegisterController.budget.ref4}" />
+				<h:inputText id="ref5" class="input" a:placeholder="Referência (Link da Imagem)" value="#{budgetRegisterController.budget.ref5}" />
+            	<h:commandButton class="submit" value="Solicitar Orçamento" action="#{budgetRegisterController.save}"/>
+            </h:form>
             <a href="view_budgets.xhtml"><button class="adminButton" id="orç">Verificar orçamentos</button></a>
         </div>
     </h:body>
