--- a/SeivaBruta/projeto/src/main/webapp/index.xhtml
+++ b/SeivaBruta/projeto/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
                 <img src="resources/img/adddimg.png" alt="Imagem 8"></img>
                 <img src="resources/img/adddimg.png" alt="Imagem 9"></img>
                 <img src="resources/img/adddimg.png" alt="Imagem 10"></img>
-                <button class="adminButton" style="display:none;">Editar Tatagens em Destaque</button>
+                <button class="adminButton" style="display:none;">Editar Tatuagens em Destaque</button>
             </div>
 
             <div class="container">
@@ -71,8 +71,8 @@
                     </div>
                     <button class="adminButton" style="display:none;">Excluir</button>
                 </div>
-                <input type="text" placeholder="Deixe sua avaliação..."></input>
-                <input type="submit" value="Avaliar"></input>
+                <input type="text" placeholder="Deixe sua avaliação..." class="input"></input>
+                <input type="submit" value="Avaliar" class="submit"></input>
             </div>
         </div>
     </h:body>
