--- a/SeivaBruta/projeto/src/main/webapp/events.xhtml
+++ b/SeivaBruta/projeto/src/main/webapp/events.xhtml
@@ -8,10 +8,10 @@
     <ui:define name="content">
 
     <h:head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="resources/css/style.css" media="screen" />
-        <link rel="icon" href="resources/img/icon.png" type="image/png">
+        <link rel="icon" href="resources/img/icon.png" type="image/png" />
         <title>Eventos|SeivaBrutaTattoo</title>
         <style>
             body {
